[gd_scene load_steps=22 format=3 uid="uid://bpg2flth8kj0a"]

[ext_resource type="Script" path="res://levels/level.gd" id="1_lqu0v"]
[ext_resource type="Texture2D" uid="uid://cv8r21s456x0r" path="res://assets/sprites/tilesets/props.png" id="2_n2sn2"]
[ext_resource type="Shader" path="res://assets/vignette.gdshader" id="2_sepdc"]
[ext_resource type="PackedScene" uid="uid://c4hdfq0nwufg2" path="res://util/dialogs/dialog_player.tscn" id="3_7iiw5"]
[ext_resource type="PackedScene" uid="uid://b8lpuwfgqi0p4" path="res://util/ui.tscn" id="4_e7kr8"]
[ext_resource type="PackedScene" uid="uid://s6gqeaiumo07" path="res://entities/tile_map.tscn" id="5_te513"]
[ext_resource type="PackedScene" uid="uid://by1g6pxt13g7r" path="res://entities/player.tscn" id="6_0b8ba"]
[ext_resource type="PackedScene" uid="uid://yk7ck8pvav6o" path="res://entities/win_area.tscn" id="7_ydtpb"]
[ext_resource type="PackedScene" uid="uid://p26bvejpgmuc" path="res://entities/battery_collectible.tscn" id="8_i32ki"]
[ext_resource type="PackedScene" uid="uid://b5868byvdgan7" path="res://entities/temp_wall.tscn" id="9_l06m6"]
[ext_resource type="PackedScene" uid="uid://d1ido7v2634km" path="res://entities/button.tscn" id="11_jrfg1"]
[ext_resource type="PackedScene" uid="uid://8g4wm62jfcjk" path="res://entities/button_platform.tscn" id="12_cs4sq"]

[sub_resource type="AtlasTexture" id="AtlasTexture_gknox"]
atlas = ExtResource("2_n2sn2")
region = Rect2(32, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_e8prl"]
atlas = ExtResource("2_n2sn2")
region = Rect2(128, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vfmb4"]
atlas = ExtResource("2_n2sn2")
region = Rect2(96, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_aghuk"]
atlas = ExtResource("2_n2sn2")
region = Rect2(64, 128, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_e8a3b"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gknox")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e8prl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vfmb4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aghuk")
}],
"loop": true,
"name": &"default",
"speed": 12.0
}]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ob0p2"]
shader = ExtResource("2_sepdc")
shader_parameter/alpha = 0.7
shader_parameter/inner_radius = 0.0
shader_parameter/outer_radius = 1.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fgxxr"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_v3wdi"]
size = Vector2(1528, 144)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_j8ovy"]
size = Vector2(16, 192)

[node name="LevelTest" type="Node2D"]
editor_description = "attributions memorandum:
Silver (pixel font) by Poppy Works
https://poppyworks.itch.io/silver
m3x6 (pixel font) by Daniel Linssen
https://managore.itch.io/m3x6"
script = ExtResource("1_lqu0v")
level_edge = Vector2i(2816, -976)
level_start_direction = 4

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(208, 160)
sprite_frames = SubResource("SpriteFrames_e8a3b")
autoplay = "default"
frame_progress = 0.492847

[node name="Vignette" type="CanvasLayer" parent="."]
visible = false

[node name="ColorRect" type="ColorRect" parent="Vignette"]
material = SubResource("ShaderMaterial_ob0p2")
offset_right = 336.0
offset_bottom = 224.0

[node name="DialogPlayer" parent="." instance=ExtResource("3_7iiw5")]

[node name="UI" parent="." instance=ExtResource("4_e7kr8")]

[node name="TileMap" parent="." instance=ExtResource("5_te513")]
z_index = 1
layer_0/z_index = 1
layer_0/tile_data = PackedInt32Array(-983046, 1, 6, -917510, 1, 6, -851974, 1, 6, -786438, 1, 6, -720902, 1, 7, -983044, 262145, 4, -851972, 1, 6, -786436, 1, 6, -720900, 262145, 5, -983043, 131073, 4, -983042, 131073, 4, -851970, 65537, 4, -720898, 131073, 4, -983041, 327681, 4, -851969, 327681, 5, -720897, 131073, 4, 196607, 1, 6, 262143, 1, 6, 327679, 1, 6, 393215, 1, 6, 458751, 1, 6, 524287, 1, 6, 589823, 1, 6, 655359, 1, 6, 720895, 1, 6, 786431, 524289, 6, 851967, 65537, 6, 917503, 65537, 7, 851968, 131073, 7, -1179647, 327681, 4, -1048575, 1, 6, -983039, 1, 6, -917503, 1, 6, -851967, 1, 6, -786431, 327681, 5, 851969, 131073, 7, -1441790, 1, 6, -1376254, 524289, 7, -1310718, 393217, 5, 851970, 131073, 7, 851971, 196609, 7, 720905, 65537, 8, -851956, 1, 6, -786420, 262145, 5, -65522, 1, 7, -983024, 1, 6, -917488, 1, 7, -786416, 131073, 4, -262128, 1, 7, 458769, 1, 6, 524305, 1, 6, 589841, 1, 7, -983022, 1, 5, -851950, 1, 6, -786414, 327681, 5, -458734, 1, 7, -65518, 1, 7, 524307, 65537, 6, 589843, 65537, 6, 655379, 65537, 6, 720915, 65537, 6, 786451, 65537, 7, -983020, 1, 5, -851948, 1, 6, -786412, 524289, 6, -720876, 655361, 7, -655340, 1, 7, -262124, 1, 7, 524308, 131073, 6, 589844, 131073, 6, 655380, 131073, 6, 720916, 131073, 6, 786452, 131073, 7, 589845, 131073, 6, 655381, 131073, 6, 720917, 131073, 6, 786453, 131073, 7, -983018, 1, 6, -917482, 1, 7, -786410, 131073, 4, -458730, 1, 7, -65514, 1, 7, 655382, 131073, 6, 720918, 131073, 6, 786454, 131073, 7, 720919, 131073, 6, 786455, 131073, 7, -983016, 1, 6, -917480, 1, 7, -786408, 131073, 4, -262120, 1, 7, 786456, 131073, 7, -983014, 1, 5, -851942, 1, 6, -786406, 327681, 5, -65510, 1, 7, -983010, 1, 6, -917474, 1, 7, 131104, 1, 4, 393249, 65537, 4, -131036, 65537, 7, 36, 1, 4, -65499, 1, 7, 327717, 196609, 4, -196558, 327681, 4, -1114118, 262145, 4, -1048582, 1, 6, -1114117, 131073, 4, -1114116, 131073, 4, -917508, 1, 6, -1114115, 131073, 4, -720899, 131073, 4, -1114114, 131073, 4, -1114113, 131073, 4, -917505, 1, 6, 65535, 65537, 5, 131071, 393217, 6, -1179648, 131073, 4, -786432, 131073, 4, 0, 393217, 4, 65536, 196609, 7, 720896, 131073, 5, 786432, 131073, 6, -1572863, 65537, 4, -1376255, 65537, 5, -1310719, 65537, 7, -1114111, 1, 6, 1, 196609, 4, 720897, 131073, 5, 786433, 131073, 6, -1572862, 327681, 4, -1507326, 1, 6, 720898, 131073, 5, 786434, 131073, 6, -1310717, 131073, 4, 720899, 196609, 5, 786435, 196609, 6, -1310716, 131073, 4, 720900, 65537, 3, -1310715, 196609, 4, 458757, 655361, 0, 720901, 131073, 3, 65542, 655361, 2, 131078, 655361, 3, 327686, 655361, 0, 393222, 655361, 1, 720902, 131073, 3, 196615, 655361, 0, 262151, 1, 0, 720903, 131073, 3, 65544, 655361, 0, 131080, 655361, 1, 720904, 196609, 3, -65527, 655361, 0, 9, 1, 0, 720906, 131073, 8, 720907, 131073, 8, -983028, 1, 5, -917492, 1, 6, 720908, 131073, 8, -786419, 131073, 4, -131059, 65537, 4, 720909, 196609, 8, -786418, 131073, 4, -196594, 1, 5, -131058, 655361, 5, -786417, 131073, 4, -327665, 65537, 4, -131057, 196609, 4, -1114096, 262145, 4, -1048560, 1, 6, -393200, 1, 5, -327664, 655361, 5, 16, 1, 4, -1114095, 131073, 4, -786415, 131073, 4, -524271, 65537, 4, -327663, 196609, 4, -131055, 65537, 4, 327697, 1, 5, 393233, 1, 6, -1114094, 131073, 4, -917486, 1, 6, -589806, 1, 5, -524270, 655361, 5, -196590, 1, 5, -131054, 655361, 5, -1114093, 131073, 4, -720877, 65537, 4, -524269, 196609, 4, -327661, 65537, 4, -131053, 196609, 4, 393235, 65537, 5, 458771, 65537, 6, -1114092, 131073, 4, -917484, 1, 6, -393196, 1, 5, -327660, 655361, 5, 393236, 196609, 5, 458772, 262145, 7, -1114091, 131073, 4, -786411, 393217, 4, -720875, 196609, 7, -524267, 65537, 4, -327659, 196609, 4, -131051, 65537, 4, 458773, 196609, 5, 524309, 262145, 7, -1114090, 327681, 4, -1048554, 1, 6, -589802, 1, 5, -524266, 655361, 5, -196586, 1, 5, -131050, 655361, 5, 524310, 196609, 5, 589846, 262145, 7, -786409, 131073, 4, -524265, 196609, 4, -327657, 65537, 4, -131049, 196609, 4, 589847, 196609, 5, 655383, 262145, 7, -1114088, 262145, 4, -1048552, 1, 6, -393192, 1, 5, -327656, 655361, 5, 655384, 196609, 5, 720920, 262145, 7, -1114087, 131073, 4, -786407, 131073, 4, -327655, 196609, 4, -131047, 65537, 4, 720921, 196609, 5, 786457, 393217, 5, -1114086, 131073, 4, -917478, 1, 6, -196582, 1, 5, -131046, 655361, 5, 786458, 196609, 4, -1114085, 131073, 4, -131045, 196609, 4, -1114084, 131073, 4, -1114083, 131073, 4, -1114082, 327681, 4, -1048546, 1, 6, 31, 262145, 4, 65567, 1, 7, -720864, 65537, 4, -524256, 1, 5, -458720, 262145, 5, 32, 196609, 4, 327712, 1, 4, -1114079, 65537, 4, -720863, 327681, 4, -655327, 262145, 5, -458719, 327681, 4, -393183, 1, 7, 65569, 1, 4, 262177, 1, 4, -1179614, 262145, 4, -1114078, 327681, 5, -655326, 327681, 4, -589790, 262145, 5, 327714, 1, 5, 393250, 327681, 5, -1245149, 262145, 4, -1179613, 327681, 5, -589789, 327681, 4, -524253, 1, 7, -327645, 1, 5, -262109, 262145, 5, -65501, 1, 4, -1310684, 1, 5, -1245148, 327681, 5, -262108, 327681, 4, -196572, 524289, 6, 262180, 1, 5, 327716, 262145, 5, -1114075, 65537, 4, -458715, 1, 5, -393179, 262145, 5, -196571, 196609, 5, -131035, 458753, 6, 196645, 1, 4, -1441754, 65537, 4, -1179610, 262145, 4, -1114074, 327681, 5, -393178, 327681, 4, -327642, 262145, 5, 262182, 1, 4, -1507289, 262145, 4, -1441753, 327681, 5, -1245145, 262145, 4, -1179609, 327681, 5, -327641, 327681, 4, -262105, 1, 7, -1572824, 262145, 4, -1507288, 327681, 5, -1310680, 262145, 4, -1245144, 327681, 5, -1638359, 262145, 4, -1572823, 327681, 5, -1376215, 262145, 4, -1310679, 327681, 5, -1114071, 65537, 4, -1703894, 262145, 4, -1638358, 327681, 5, -1441750, 1, 5, -1376214, 327681, 5, -1179606, 1, 5, -1114070, 327681, 5, -655318, 1, 5, -589782, 262145, 5, -1703893, 196609, 4, -589781, 196609, 4, -1572820, 65537, 4, -1310676, 65537, 4, -458708, 1, 5, -393172, 262145, 5, -1638355, 262145, 4, -1572819, 327681, 5, -1376211, 262145, 4, -1310675, 327681, 5, -1114067, 65537, 4, -589779, 65537, 4, -393171, 196609, 4, -1703890, 262145, 4, -1638354, 327681, 5, -1441746, 262145, 4, -1376210, 327681, 5, -1179602, 262145, 4, -1114066, 327681, 5, -589778, 327681, 4, -524242, 1, 7, -262098, 1, 5, -196562, 262145, 5, -1703889, 196609, 4, -1507281, 262145, 4, -1441745, 327681, 5, -1245137, 262145, 4, -1179601, 327681, 5, -393169, 65537, 4, -196561, 196609, 4, -1572816, 262145, 4, -1507280, 327681, 5, -1310672, 262145, 4, -1245136, 327681, 5, -393168, 327681, 4, -327632, 1, 7, -1638351, 262145, 4, -1572815, 327681, 5, -1376207, 1, 5, -1310671, 327681, 5, -1114063, 65537, 4, -196559, 65537, 4, -1703886, 262145, 4, -1638350, 327681, 5, -1179598, 262145, 4, -1114062, 327681, 5, -393166, 1, 5, -327630, 262145, 5, -131022, 1, 7, -1703885, 196609, 4, -1507277, 65537, 4, -1245133, 262145, 4, -1179597, 327681, 5, -327629, 196609, 4, -1572812, 262145, 4, -1507276, 327681, 5, -1310668, 262145, 4, -1245132, 327681, 5, -1638347, 262145, 4, -1572811, 327681, 5, -1376203, 262145, 4, -1310667, 327681, 5, -1114059, 65537, 4, -1703882, 262145, 4, -1638346, 327681, 5, -1441738, 262145, 4, -1376202, 327681, 5, -1179594, 262145, 4, -1114058, 327681, 5, -1703881, 196609, 4, -1507273, 262145, 4, -1441737, 327681, 5, -1245129, 262145, 4, -1179593, 327681, 5, -1572808, 262145, 4, -1507272, 327681, 5, -1310664, 262145, 4, -1245128, 327681, 5, -1638343, 262145, 4, -1572807, 327681, 5, -1376199, 262145, 4, -1310663, 327681, 5, -1114055, 65537, 4, -1703878, 262145, 4, -1638342, 327681, 5, -1441734, 1, 5, -1376198, 327681, 5, -1179590, 1, 5, -1114054, 327681, 5, -1703877, 196609, 4, -1572804, 65537, 4, -1310660, 65537, 4, -1638339, 262145, 4, -1572803, 327681, 5, -1376195, 262145, 4, -1310659, 327681, 5, -1114051, 65537, 4, -1703874, 262145, 4, -1638338, 327681, 5, -1441730, 262145, 4, -1376194, 327681, 5, -1114050, 131073, 4, -1703873, 196609, 4, -1507265, 1, 5, -1441729, 327681, 5, -1114049, 196609, 4, 458763, 393217, 1, 458764, 458753, 1, 458765, 524289, 1, 458766, 589825, 1, 458760, 262145, 1, 458761, 327681, 1, 589826, 262145, 0, 589827, 327681, 0, 655362, 1, 4, 655363, 1, 4)
layer_2/y_sort_origin = 1

[node name="Player" parent="." instance=ExtResource("6_0b8ba")]
z_index = 2
position = Vector2(141, 136)

[node name="StartingArea" type="Area2D" parent="."]
position = Vector2(48, 166)
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="StartingArea"]
shape = SubResource("RectangleShape2D_fgxxr")

[node name="OutOfBoundsArea" type="Area2D" parent="."]
position = Vector2(8, 248)
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="OutOfBoundsArea"]
position = Vector2(1688, 64)
shape = SubResource("RectangleShape2D_v3wdi")

[node name="Checkpoints" type="Node2D" parent="."]

[node name="WinArea" parent="Checkpoints" instance=ExtResource("7_ydtpb")]
z_index = 1
position = Vector2(480, -288)

[node name="Collectibles" type="Node2D" parent="."]

[node name="BatteryCollectible" parent="Collectibles" instance=ExtResource("8_i32ki")]
position = Vector2(16, -368)

[node name="BatteryCollectible3" parent="Collectibles" instance=ExtResource("8_i32ki")]
position = Vector2(784, -288)

[node name="BatteryCollectible2" parent="Collectibles" instance=ExtResource("8_i32ki")]
position = Vector2(184, 40)

[node name="NextAreaTeleport" type="Area2D" parent="."]
position = Vector2(2824, -880)
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="NextAreaTeleport"]
shape = SubResource("RectangleShape2D_j8ovy")

[node name="Label" type="Label" parent="."]
offset_left = 16.0
offset_top = 64.0
offset_right = 289.0
offset_bottom = 113.0
text = "fly until you run out of energy
then try not to miss the energy pad"

[node name="Label2" type="Label" parent="."]
offset_left = 384.0
offset_top = 144.0
offset_right = 657.0
offset_bottom = 193.0
text = "ha you missed"

[node name="Label3" type="Label" parent="."]
offset_left = 80.0
offset_top = -8.0
offset_right = 353.0
offset_bottom = 41.0
text = "ha get trapped"

[node name="TempWall" parent="." instance=ExtResource("9_l06m6")]
position = Vector2(288, 80)

[node name="TempWall2" parent="." instance=ExtResource("9_l06m6")]
position = Vector2(168, 40)

[node name="TempWall3" parent="." instance=ExtResource("9_l06m6")]
position = Vector2(200, 40)

[node name="TempWall4" parent="." instance=ExtResource("9_l06m6")]
position = Vector2(200, 56)
rotation = 1.57079

[node name="TempWall6" parent="." instance=ExtResource("9_l06m6")]
position = Vector2(800, -336)

[node name="TempWall7" parent="." instance=ExtResource("9_l06m6")]
position = Vector2(832, -320)
rotation = 1.57079

[node name="TempWall5" parent="." instance=ExtResource("9_l06m6")]
position = Vector2(200, 24)
rotation = 1.57079

[node name="Button" parent="." node_paths=PackedStringArray("linked_platform") instance=ExtResource("11_jrfg1")]
position = Vector2(280, 168)
linked_platform = NodePath("../ButtonPlatform")

[node name="ButtonPlatform" parent="." instance=ExtResource("12_cs4sq")]
position = Vector2(264, 184)

[connection signal="body_entered" from="OutOfBoundsArea" to="." method="_on_out_of_bounds_area_body_entered"]
[connection signal="body_entered" from="NextAreaTeleport" to="." method="_on_next_area_teleport_body_entered"]
